As a user i can see my account details [Delivers #179682834]
